Устранил конфликты после слияния с level-2

--- a/src/analytics.html
+++ b/src/analytics.html
@@ -17,8 +17,10 @@
             <header class="header">
                 <p class="header__logo">NewsAnalyzer</p>
                 <nav class="header__page-links">
-                    <a href="./index.html" class="header__page header__page_not-active header__page_not-active_theme_dark">Главная</a>
-                    <a href="./about.html" class="header__page header__page_not-active header__page_not-active_theme_dark">О проекте</a>
+                    <a href="./index.html"
+                        class="header__page header__page_not-active header__page_not-active_theme_dark">Главная</a>
+                    <a href="./about.html"
+                        class="header__page header__page_not-active header__page_not-active_theme_dark">О проекте</a>
                 </nav>
             </header>
             <div class="section-content">
@@ -43,38 +45,7 @@
                         <p>75</p>
                         <p>100</p>
                     </div>
-<<<<<<< HEAD
-                    <div class="diagram__row diagram__row_first">
-                        <p class="diagram__row-name diagram__row-name_day_1">, пн</p>
-                        <div class="diagram__bar diagram__bar_day_1"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_2">, вт</p>
-                        <div class="diagram__bar diagram__bar_day_2"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_3">, ср</p>
-                        <div class="diagram__bar diagram__bar_day_3"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_4">, чт</p>
-                        <div class="diagram__bar diagram__bar_day_4"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_5">, пт</p>
-                        <div class="diagram__bar diagram__bar_day_5"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_6">, сб</p>
-                        <div class="diagram__bar diagram__bar_day_6"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_7">, вс</p>
-                        <div class="diagram__bar diagram__bar_day_7"></div>
-                    </div>
-=======
                     <div class="diagram__chart-area"></div>
->>>>>>> level-2
                     <div class="diagram__scale">
                         <p>0</p>
                         <p>25</p>
@@ -90,11 +61,14 @@
             <ul class="footer__links">
                 <li><a href="./index.html" class="footer__link">Главная</a></li>
                 <li><a href="./about.html" class="footer__link">О проекте</a></li>
-                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
+                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a>
+                </li>
             </ul>
             <ul class="footer__social">
-                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg"
+                            alt="Github иконка" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img
+                            src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
