--- a/src/about.html
+++ b/src/about.html
@@ -79,10 +79,12 @@
                     <div class="author__about-text">
                         <p class="author__text-paragraph">Я Евгений Лобанов - начинающий фронтенд-разработчик.</p>
                         <p class="author__text-paragraph">Этот сайт - мой дипломный проект в Яндекс.Практикум.</p>
-                        <p class="author__text-paragraph">По образованию я инженер-электроник. Семь месяцев назад решил освоить
-                          новую профессию и стать фронтендером. Обучение в Яндекс.Практикум помогло мне овладеть основными
-                          технологиями и инструментами для создания современных сайтов.</p>
-                      </div>
+                        <p class="author__text-paragraph">По образованию я инженер-электроник. Семь месяцев назад решил
+                            освоить
+                            новую профессию и стать фронтендером. Обучение в Яндекс.Практикум помогло мне овладеть
+                            основными
+                            технологиями и инструментами для создания современных сайтов.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -90,88 +92,9 @@
             <div class="section-content">
                 <div class="section-header">
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
-<<<<<<< HEAD
                     <a href="https://github.com/EvgeniyL0/NewsAnalyzer/commits"
                         class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub
                         &gt;</a>
-                </div>
-                <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                </div>
-                <button class="button button_open-link">Открыть в GitHub</button>
-=======
-                    <a href="https://github.com/EvgeniyL0/NewsAnalyzer/commits" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
                 </div>
                 <div class="main-carousel">
                     <h2 class="content-title content-title_commits">Что-то пошло не так...</h2>
@@ -180,7 +103,6 @@
                 <form action="https://github.com/EvgeniyL0/NewsAnalyzer/commits" target="_blank">
                     <button class="button button_open-link">Открыть в GitHub</button>
                 </form>
->>>>>>> level-2
             </div>
         </section>
         <footer class="footer">
@@ -188,7 +110,6 @@
             <ul class="footer__links">
                 <li><a href="./index.html" class="footer__link">Главная</a></li>
                 <li><a href="./about.html" class="footer__link">О проекте</a></li>
-<<<<<<< HEAD
                 <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a>
                 </li>
             </ul>
@@ -197,13 +118,6 @@
                             alt="Github icon" class="footer__social-icon"></a></li>
                 <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img
                             src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
-=======
-                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
-            </ul>
-            <ul class="footer__social">
-                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
->>>>>>> level-2
             </ul>
         </footer>
     </div>
