--- a/src/index.html
+++ b/src/index.html
@@ -49,42 +49,7 @@
             <h2 class="content-title content-title_section-header">Результаты поиска</h2>
             <a href="./analytics.html" class="section-header__link">Посмотреть аналитику &gt;</a>
           </div>
-          <div class="results__news-cards">
-            <div class="card">
-              <img src="./images/sample.jpg" alt="Иллюстрация" class="card__image">
-              <div class="card__description">
-                <p class="card__date">2 августа, 2019</p>
-                <a href="" class="card__news-title">Национальное достояние - парки</a>
-                <p class="card__news-text">В 2016 году Америка отмечала важный юбилей: сто лет назад здесь начала
-                  складываться
-                  система национальных парков – охраняемых территорий, где и сегодня каждый может приобщиться к природе.
-                </p>
-                <p class="card__source">ЛЕНТА.РУ</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="./images/sample.jpg" alt="Иллюстрация" class="card__image">
-              <div class="card__description">
-                <p class="card__date">2 августа, 2019</p>
-                <a href="" class="card__news-title">Лесные огоньки: история одной фотографии</a>
-                <p class="card__news-text">Фотограф отвлеклась от освещения суровой политической реальности Мексики,
-                  чтобы запечатлеть ускользающую красоту одного из местных чудес природы.
-                </p>
-                <p class="card__source">ЛЕНТА.РУ</p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="./images/sample.jpg" alt="Иллюстрация" class="card__image">
-              <div class="card__description">
-                <p class="card__date">2 августа, 2019</p>
-                <a href="" class="card__news-title">«Первозданная тайга»: новый фотопроект Игоря Шпиленка</a>
-                <p class="card__news-text">Знаменитый фотограф снимает первозданные леса России, чтобы рассказать о
-                  необходимости их сохранения. В этот раз он отправился в Двинско-Пинежскую тайгу, где...
-                </p>
-                <p class="card__source">ЛЕНТА.РУ</p>
-              </div>
-            </div>
-          </div>
+          <div class="results__news-cards"></div>
           <button class="button button_more">Показать ещё</button>
         </div>
       </div>
