--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/styles/about.c61454c637124c94dde7.css">
+    <link rel="stylesheet" href="./assets/styles/about.3367022361280e72c4bd.css">
 </head>
 
 <body>
@@ -79,10 +79,12 @@
                     <div class="author__about-text">
                         <p class="author__text-paragraph">Я Евгений Лобанов - начинающий фронтенд-разработчик.</p>
                         <p class="author__text-paragraph">Этот сайт - мой дипломный проект в Яндекс.Практикум.</p>
-                        <p class="author__text-paragraph">По образованию я инженер-электроник. Семь месяцев назад решил освоить
-                          новую профессию и стать фронтендером. Обучение в Яндекс.Практикум помогло мне овладеть основными
-                          технологиями и инструментами для создания современных сайтов.</p>
-                      </div>
+                        <p class="author__text-paragraph">По образованию я инженер-электроник. Семь месяцев назад решил
+                            освоить
+                            новую профессию и стать фронтендером. Обучение в Яндекс.Практикум помогло мне овладеть
+                            основными
+                            технологиями и инструментами для создания современных сайтов.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -90,7 +92,9 @@
             <div class="section-content">
                 <div class="section-header">
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
-                    <a href="https://github.com/EvgeniyL0/NewsAnalyzer/commits" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
+                    <a href="https://github.com/EvgeniyL0/NewsAnalyzer/commits"
+                        class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub
+                        &gt;</a>
                 </div>
                 <div class="main-carousel">
                     <h2 class="content-title content-title_commits">Что-то пошло не так...</h2>
@@ -106,15 +110,18 @@
             <ul class="footer__links">
                 <li><a href="./index.html" class="footer__link">Главная</a></li>
                 <li><a href="./about.html" class="footer__link">О проекте</a></li>
-                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
+                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a>
+                </li>
             </ul>
             <ul class="footer__social">
-                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg"
+                            alt="Github icon" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img
+                            src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/js/about.a78a6e4c944b3088afbb.js"></script>
+    <script type="module" src="./assets/js/about.640f93030b1c536ebc50.js"></script>
 </body>
 
 </html>
