--- a/analytics.html
+++ b/analytics.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/styles/analytics.f07ebc9e5ed63445ac99.css">
+    <link rel="stylesheet" href="./assets/styles/analytics.aafbb18536d6604a83f9.css">
 </head>
 
 <body>
@@ -17,8 +17,10 @@
             <header class="header">
                 <p class="header__logo">NewsAnalyzer</p>
                 <nav class="header__page-links">
-                    <a href="./index.html" class="header__page header__page_not-active header__page_not-active_theme_dark">Главная</a>
-                    <a href="./about.html" class="header__page header__page_not-active header__page_not-active_theme_dark">О проекте</a>
+                    <a href="./index.html"
+                        class="header__page header__page_not-active header__page_not-active_theme_dark">Главная</a>
+                    <a href="./about.html"
+                        class="header__page header__page_not-active header__page_not-active_theme_dark">О проекте</a>
                 </nav>
             </header>
             <div class="section-content">
@@ -59,11 +61,14 @@
             <ul class="footer__links">
                 <li><a href="./index.html" class="footer__link">Главная</a></li>
                 <li><a href="./about.html" class="footer__link">О проекте</a></li>
-                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
+                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a>
+                </li>
             </ul>
             <ul class="footer__social">
-                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github иконка" class="footer__social-icon"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg"
+                            alt="Github иконка" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img
+                            src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
