Отрефакторил код метода render класса NewsCardList

--- a/src/index.html
+++ b/src/index.html
@@ -37,12 +37,12 @@
       <div class="section-content">
         <div class="results__loading">
           <div class="loader"></div>
-          <p class="content-subtitle content-subtitle_loading">Идёт загрузка...</p>
+          <p class="content-subtitle content-subtitle_results">Идёт загрузка...</p>
         </div>
         <div class="results__not-found">
           <img src="./images/not-found.svg" alt="Не найдено" class="results__not-found-image">
-          <h2 class="content-title content-title_loading"></h2>
-          <p class="content-subtitle content-subtitle_loading"></p>
+          <h2 class="content-title content-title_results"></h2>
+          <p class="content-subtitle content-subtitle_results"></p>
         </div>
         <div class="results__wrapper">
           <div class="section-header">
